# raspicat_speak

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: speak_list.yaml  voice_config.yaml
include/raspicat_speak/: japanese_speak.hpp  speak_list.hpp
launch/: raspicat_speak.launch
scripts/: install.sh
src/: japanese_speak.cpp  japanese_speak_node.cpp
voice_model/: COPYRIGHT.txt  README.txt
